# DeepRepo

./: .gitignore  requirements.txt
Learning Cases/: add_edge_dependency_test.py  learn_langgraph1.py  learn_langgraph2.py  state_variable_controll_usecase.py  type_transfer_case_learning.py
drafts/: deep_reader.py  pyproject.toml  stream_do_math_sample.txt  test_repeat_client.py
mcp/client/: main.py
mcp_system/: README.md  pyproject.toml
mcp_system/client/: README.md  client.py  deep_reader.py  main_agent.py  test_repeat_client.py  tmp.py  tmp.txt
mcp_system/client/agents/: agent.py  cache_agent.py
mcp_system/client/data_models/: cache_agent_data_models.py
mcp_system/client/old/: context_creater.py  custom_agent.py  main_agent.py
mcp_system/client/preprocess/: cache_agent_preprocess.py  preprocess.py
mcp_system/client/query_results/: sample_1_weather_server_sample_with_print_statement.py
mcp_system/client/test/: preprocess_ut.py
mcp_system/graph/: code_block.py  document.py  knowledge_graph.py  scanner.py
mcp_system/script/: code_reformat.py
mcp_system/servers/lsp/: fmcp.py  main.py  tools.py
mcp_system/servers/lsp/servers/: __init__.py  base.py  python.py
mcp_system/servers/lsp_mcp_server/: GRAPH_VISUALIZATION.md
mcp_system/servers/lsp_mcp_server/src/lsp_mcp_server/: __init__.py  code_block.py  document.py  graph.py  scanner.py  server.py
mcp_system/servers/lsp_mcp_server/src/lsp_mcp_server/lsps/: base.py  python.py
mcp_system/servers/lsp_mcp_server/tests/: test_parser.py
mcp_system/testing_data/: knowledge_graph.json  test1.json
(+22 files in other folders)
