[project]
name = "mcp-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastmcp>=2.10.2",
    "lsprotocol==2023.0.1",
    "pyright>=1.1.403",
    "langgraph>=0.0.50",
    "langchain-openai>=0.3.30"
]
